Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28428

Compression and XATTR can crash memcached

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 5.5.0
    • master, 5.5.0
    • couchbase-bucket
    • Untriaged
    • No

    Description

      A number of places in ep-engine want to examine an xattr document and maybe make changes to it.

      • deleteWithMeta needs to 'prune' the xattrs and leave system xattrs
      • DCP xattr only/value only needs to modify the item to produce the desired output

      Neither of these code paths are snappy aware, they will both only check if the document is xattr, then work on the value as if it has xattrs, however the compressed data can cause the code to make invalid memory accesses and crash.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              akshata.trivedi Akshata Trivedi [X] (Inactive)
              jwalker Jim Walker
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty